# server/openapi.json
@@ -60,29 +60,121 @@
         }
       }
     },
-    "/available-dates": {
+    "/event-types": {
       "get": {
-        "operationId": "AvailableDatesApi_get",
+        "operationId": "EventTypes_list",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/EventType"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "operationId": "EventTypes_create",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "The request has succeeded and a new resource has been created as a result.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EventType"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/EventTypeInput"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/event-types/{eventTypeId}/available-dates": {
+      "get": {
+        "operationId": "EventTypeAvailableDates_get",
         "parameters": [
           {
-            "name": "month",
-            "in": "query",
+            "name": "eventTypeId",
+            "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
-            },
-            "explode": false
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AvailableDates"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/event-types/{eventTypeId}/slots": {
+      "get": {
+        "operationId": "EventTypeSlots_get",
+        "parameters": [
+          {
+            "name": "eventTypeId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
           },
           {
-            "name": "duration",
+            "name": "date",
             "in": "query",
             "required": true,
             "schema": {
               "type": "string",
-              "enum": [
-                "15",
-                "30"
-              ]
+              "format": "date"
             },
             "explode": false
           }
@@ -93,7 +185,130 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AvailableDates"
+                  "$ref": "#/components/schemas/Slots"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/event-types/{id}": {
+      "get": {
+        "operationId": "EventTypes_get",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EventType"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "operationId": "EventTypes_update",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EventType"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/EventTypeInput"
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "operationId": "EventTypes_delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "There is no content to send for this request, but the headers may be useful. "
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
                 }
               }
             }
@@ -149,8 +364,8 @@
         "operationId": "Meets_create",
         "parameters": [],
         "responses": {
-          "200": {
-            "description": "The request has succeeded.",
+          "201": {
+            "description": "The request has succeeded and a new resource has been created as a result.",
             "content": {
               "application/json": {
                 "schema": {
@@ -265,48 +480,6 @@
           }
         }
       }
-    },
-    "/slots": {
-      "get": {
-        "operationId": "SlotsApi_get",
-        "parameters": [
-          {
-            "name": "date",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "date"
-            },
-            "explode": false
-          },
-          {
-            "name": "duration",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-                "15",
-                "30"
-              ]
-            },
-            "explode": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The request has succeeded.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Slots"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -337,24 +510,13 @@
       "Availability": {
         "type": "object",
         "required": [
-          "workingHours",
-          "slotDurations"
+          "workingHours"
         ],
         "properties": {
           "workingHours": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/WorkingHour"
-            }
-          },
-          "slotDurations": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "enum": [
-                "15",
-                "30"
-              ]
             }
           }
         }
@@ -374,10 +536,56 @@
           }
         }
       },
+      "EventType": {
+        "type": "object",
+        "required": [
+          "id",
+          "title",
+          "description",
+          "durationMinutes"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "durationMinutes": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "EventTypeInput": {
+        "type": "object",
+        "required": [
+          "title",
+          "description",
+          "durationMinutes"
+        ],
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "durationMinutes": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "Meet": {
         "type": "object",
         "required": [
           "id",
+          "endTime",
           "inviteLink",
           "status",
           "createdAt",
@@ -387,6 +595,10 @@
           "id": {
             "type": "integer",
             "format": "int32"
+          },
+          "endTime": {
+            "type": "string",
+            "format": "date-time"
           },
           "inviteLink": {
             "type": "string"
@@ -416,12 +628,16 @@
       "MeetInput": {
         "type": "object",
         "required": [
+          "eventTypeId",
           "name",
           "theme",
-          "startTime",
-          "endTime"
+          "startTime"
         ],
         "properties": {
+          "eventTypeId": {
+            "type": "integer",
+            "format": "int32"
+          },
           "name": {
             "type": "string"
           },
@@ -432,10 +648,6 @@
             "type": "string"
           },
           "startTime": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "endTime": {
             "type": "string",
             "format": "date-time"
           }
